# Kokoro.C

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Makefile  NOTICE  README.md  RELEASING.md  SECURITY.md  STANDALONE_REPO_CHECKLIST.md  THIRD_PARTY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: release.yml
examples/: demo_cpp.cpp  kokoro_cli.cpp
include/: kokoro_cpp.hpp
lexicons/: programming_terms.lexicon
scripts/: package-release.ps1  restore-assets.ps1
src/: kokoro_engine.cpp
